style: fix gap in socials box in footer

--- a/src/style/layouts/_footer.scss
+++ b/src/style/layouts/_footer.scss
@@ -50,7 +50,7 @@
   grid-column: 1 / 2;
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  gap: 3rem;
   margin-bottom: 5rem;
   @include media-screen {
     grid-row: 6 / 7;
